# SF4-Netplay-Launcher

./: .gitignore  ATTRIBUTION.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  preflight.cmd  vcpkg.json
.github/: dependabot.yml
.github/workflows/: release-windows.yml
.signpath/: signpath.json
cmake/: Launcher.exe.manifest  Sidecar.dll.manifest  sf4e_version.cmake  version.rc.in  write_qt_conf.cmake
docs/: BETA_TESTERS.md  CASUAL_NETPLAY.md  CODE_SIGNING.md  DESYNC_V2.md  ELECTRON_MIGRATION_NOTES.md  GGPO_LIFECYCLE.md  NETPLAY_INVARIANTS.md  NETPLAY_TRANSPORT_BENCHMARK.md  OLD_REPO_ARCHIVE.md  RELEASE.md  RELEASE_NOTES_STEAM_P2P_TEST_20260601.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.4.md  RELEASE_NOTES_v0.2.5.md  RELEASE_NOTES_v0.2.6.md  RELEASE_NOTES_v0.2.7.1.md  RELEASE_NOTES_v0.2.7.2.md  RELEASE_NOTES_v0.2.7.3.md  RELEASE_NOTES_v0.2.7.md  RELEASE_NOTES_v0.2.8.1.md  RELEASE_NOTES_v0.2.8.md  RELEASE_NOTES_v0.2.9.1.md  RELEASE_NOTES_v0.2.9.2.md  RELEASE_NOTES_v0.2.9.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.3.3.md  RELEASE_NOTES_v0.3.4.md  RELEASE_NOTES_v0.3.5.md  RELEASE_NOTES_v0.3.6.md  RELEASE_NOTES_v0.3.7.md  RELEASE_NOTES_v0.3.8.md  RELEASE_NOTES_v0.4.2.md  RELEASE_NOTES_v0.4.4.md  RELEASE_NOTES_v0.4.5.md  RELEASE_NOTES_v0.4.6.md  (+20 more)
electron-launcher/: README.md  main.js  package-lock.json  package.json  preload.js
electron-launcher/scripts/: sync-ui.js
launcher-ui/: app.js  icons.js  index.html  styles.css
scripts/: apply-update.ps1  build-electron-launcher.ps1  build-ggpo-relay-vps.py  check-vps-capacity.py  configure-room-idle-vps.py  defender-add-install-exclusion.ps1  deploy-broker-vps.py  deploy-dashboard-vps.py  deploy-tiered-idle-vps.ps1  finish-vps-tls.py  fix-qt-plugin-layout.ps1  github-release.ps1  load-vps-env.ps1  migrate-vps-capacity-50.py  netplay-rollback-benchmark.py  package-steam-electron.ps1  package-steam-qt.ps1  package-team.ps1  preflight-steam.ps1  prepare-defender-submission.ps1  prune-steam-dist.ps1  relay-diag.ps1  release-team-build.ps1  run-offline-test.ps1  run-package-tests.ps1  sign-release-binaries.ps1  sync-x86-qt-plugins.ps1  test-updater-download.ps1  test-vps-ports.py  test-wsl-build-env.sh  tester-preflight.ps1  transport-regression-test.py  update-dashboard-vps.py  vps-build-relay.py  vps_ssh.py
services/room-broker/: .env.example  Caddyfile.example  README.md  capacity-config.js  install-caddy.sh  install-oracle.sh  install-vps-relay.sh  install-vps.sh  restart-broker.sh  secure-ufw.sh  server.js  sf4e-broker.service  start.sh
services/room-broker/test/: capacity.test.js  idle-policy.test.js  secure-ufw.test.sh
services/vps-relay/: CMakeLists.txt  build-linux.sh  install-vps-relay.sh  relay-manager.js
services/vps-relay/dashboard/: .env.example  install.sh  server.js
src/common/: agent_debug_log.hxx  install_paths.cxx  install_paths.hxx  sf4e__GgpoGate.cxx  sf4e__GgpoGate.hxx  sf4e__NetUtil.cxx  sf4e__NetUtil.hxx  sf4e__NetplayConfig.hxx  sf4e__PacingController.hxx  sf4e__RollbackDiagnostics.cxx  sf4e__RollbackDiagnostics.hxx  sf4e__StateHash.hxx
src/launcher/: connect_strategy.cxx  connect_strategy.hxx  github_release_client.cxx  github_release_client.hxx  launcher.cxx  launcher_stub.cxx  netplay_launch_controller.cxx  netplay_launch_controller.hxx  netplay_persist.cxx  netplay_persist.hxx  netplay_room_code.cxx  netplay_room_code.hxx  netplay_wizard.cxx  relay_host_spawn.cxx  relay_host_spawn.hxx  room_broker_client.cxx  room_broker_client.hxx  updater.cxx  upnp_portmap.cxx  webview_host.cxx
src/launcher/ipc/: electron_ipc.cxx  electron_ipc.hxx
src/launcher/netplay/: netplay_launch_controller.cxx  netplay_launch_controller.hxx  netplay_persist.hxx  netplay_wizard.cxx  room_broker_client.hxx  upnp_portmap.cxx  upnp_portmap.hxx
src/launcher/qt/: controller_bridge.cxx  controller_bridge.hxx  launcher_common.cxx  launcher_common.hxx  launcher_theme.cxx  qt_launcher_app.cxx  qt_launcher_app.hxx  relay_netplay_window.cxx  relay_netplay_window.hxx  steam_p2p_window.cxx  steam_p2p_window.hxx
src/launcher/relay/: relay_host_spawn.cxx
src/launcher/steam/: steam_p2p_launcher.cxx  steam_p2p_launcher.hxx
src/launcher/update/: github_release_client.cxx  github_release_client.hxx
src/launcher/webview/: webview_host.cxx  webview_host.hxx
src/relay/: ggpo_udp_relay.cxx  relay_host.cxx  session_relay.cxx
src/session/: sf4e__GgpoRelay.cxx  sf4e__GgpoRelay.hxx  sf4e__GgpoTransport.cxx  sf4e__GgpoTransport.hxx  sf4e__SessionClient.cxx  sf4e__SessionClient.hxx  sf4e__SessionProtocol.cxx  sf4e__SessionProtocol.hxx  sf4e__SessionServer.cxx  sf4e__SessionServer.hxx  sf4e__SteamP2pSession.cxx  sf4e__SteamP2pSession.hxx
src/sf4e/: sf4e__Game__Battle.cxx  sf4e__Game__Battle__System.cxx  sf4e__Game__Battle__System.hxx  sf4e__NetplayFacade.cxx  sf4e__NetplayFacade.hxx  sf4e__Overlay.cxx  sf4e__OverlayPrefs.cxx  sf4e__OverlayPrefs.hxx  sf4e__Platform.cxx  sf4e__UserApp.cxx  sf4e__UserApp.hxx
src/sidecar/: sidecar.cxx
src/steam_experiment/: steam_p2p_payload.cxx  steam_p2p_payload.hxx  steam_p2p_payload_test.cxx  steam_p2p_probe.cxx
src/tests/: ggpo_gate_test.cxx  ggpo_udp_validation_test.cxx  pacing_controller_test.cxx  rollback_diagnostics_test.cxx  state_hash_test.cxx
vcpkg-ports/ggpo/: install-cmake-export.patch  portfile.cmake  reject-invalid-udp-messages.patch  vcpkg.json
